.provarCaches/00D410000011HE0EAM/objects/rstk__syzip__c.object
<CustomObject>
    <description>syzip__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__syzip_country__c  &amp; &apos; &apos; &amp; rstk__syzip_zipcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__syzip_zipcode__c &amp; &apos; (&apos; &amp; rstk__syzip_country__c &amp; &apos;)&apos;, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syzip_country__c</fullName>
        <inlineHelpText>The Country associated with this Postal Code record.</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syzip_dfltcity__c</fullName>
        <inlineHelpText>The City associated with this Postal Code record.</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syzip_dfltstate__c</fullName>
        <inlineHelpText>The State or Province associated with this Postal Code record.</inlineHelpText>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syzip_dimval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Accounting Value</inlineHelpText>
        <label>Accounting Value</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Postal Code Masters</relationshipLabel>
        <relationshipName>syzips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syzip_region__c</fullName>
        <inlineHelpText>The Region associated with this Postal Code record.</inlineHelpText>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syzip_zipcode__c</fullName>
        <inlineHelpText>The Zip code or Postal code for which this record is created.</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Postal Code Master</label>
    <listViews>
        <fullName>rstk__RS_Postal_Code_Masters</fullName>
        <columns>NAME</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__syzip_zipcode__c</columns>
        <columns>rstk__syzip_region__c</columns>
        <columns>rstk__syzip_dfltcity__c</columns>
        <columns>rstk__syzip_dfltstate__c</columns>
        <columns>rstk__syzip_country__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Postal Code Masters</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Postal Code Master  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Code Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Zip_Code</fullName>
        <active>true</active>
        <description>Zip/Postal code is not modifiable in edit mode.</description>
        <errorConditionFormula>(ISNEW()&amp;&amp; ISBLANK(rstk__syzip_zipcode__c ))  || (!ISNEW() &amp;&amp;  ISCHANGED( rstk__syzip_zipcode__c ))</errorConditionFormula>
        <errorMessage>Zip/Postal code is Required and not modifiable.</errorMessage>
    </validationRules>
</CustomObject>